# appctx

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  development.md
scripts/: bump_version.py
src/appctx/: __init__.py  container.py  decorators.py
tests/: conftest.py  test_container.py  test_decorators.py  test_post_construct.py  test_scan.py
tests/fixtures/: config.py
tests/fixtures/excluded/: internal.py
tests/fixtures/services/: order_service.py  user_service.py
