[metadata]
name = appctx
version = attr: appctx.__version__
author = wssccc
author_email = wssccc@qq.com
description = Spring style dependency injection for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wssccc/appctx
project_urls =
    Homepage = https://github.com/wssccc/appctx
    Repository = https://github.com/wssccc/appctx
    Bug Tracker = https://github.com/wssccc/appctx/issues
    Documentation = https://github.com/wssccc/appctx#readme
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
appctx = py.typed

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=22.0
    flake8>=5.0
    mypy>=1.0
    isort>=5.0

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[coverage:run]
source = src
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[isort]
profile = black
multi_line_output = 3
line_length = 88